--- a/contact.html
+++ b/contact.html
@@ -20,16 +20,18 @@
 <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="date.html">Key Dates</a></li>
-<!--<li><a href="">Program</a>
+<li><a href="abstract_open.html">Abstract Submission</a></li>
+<li><a href="">Program</a>
 	<ul>
 	<li><a href="agenda.html">Agenda</a></li>
-	<li><a href="invited_speakers.html">Invited Speakers</a></li>
+	<!--<li><a href="invited_speakers.html">Invited Speakers</a></li>
 	<li><a href="oral_presentations.html">Oral Presentations</a></li>
-	<li><a href="poster_presentations.html">Poster Presentations</a></li>
+	<li><a href="poster_presentations.html">Poster Presentations</a></li>-->
 	<li><a href="committee.html">Committees</a></li>
 	</ul>
 </li>
-<li><a href="venue.html">Venue</a></li>-->
+<!--<li><a href="venue.html">Venue</a></li>-->
+<li><a href="visa.html">VISA Application</a></li>
 </ul>
 </nav>
 </div>
