--- a/visa.html
+++ b/visa.html
@@ -41,50 +41,17 @@
 </ul>
 </header>
 
-<!--スライドショー-->
-<div id="mainimg-box">
-<div id="mainimg">
-</div>
-</div>
-
 <div id="contents">
 
 <main>
 
-<section class="blur">
+<section>
 
-<!--<h2>24th International Stellarator Heliotron Workshop<span>International Conference Center Hiroshima, Japan  September 9-13, 2024</span></h2>-->
-<h2>12th International Workshop on 'Stochasticity in Fusion Plasmas'</h2>
-<h2>June 2-4, 2026<span>Higashi Hiroshima Arts & Culture Hall Kurara, Japan</span></h2>
+<h2>Visa Application</h2>
 
-<h2 class="normal">What's New</h2>
+<h3>Designated participants who require a visa to enter Japan should submit the necessary application to the nearest diplomatic or consular representative of Japan as soon as possible. If you need the visa please send <font color="#ff0000">a following visa application form and a copy of the cover page of your passport</font> by e-mail (<a href="mailto:sfp2026@ml.hiroshima-u.ac.jp">sfp2026@ml.hiroshima-u.ac.jp</a>) with subject heading "VISA" not later than <font color="#ff0000">March 13</font>.</h3>
 
-<dl class="new">
-<dt>2026/02/16<span>Information</span></dt>
-<dd>Web pages are opened.</dd>
-<!--<dt>2024/04/03<span>Information</span></dt>
-<dd><a href="nomination.html">Invited speaker nomination</a> is commencing.</dd>
-<dt>2024/04/06<span>Information</span></dt>
-<dd><a href="venue.html">Venue</a> page is opened.</dd>
-<dt>2024/05/01<span>Information</span></dt>
-<dd><a href="abstract.html">Abstract Submission</a> page is opened.</dd>
-<dt>2024/05/02<span>Information</span></dt>
-<dd><a href="invited_speakers.html">Invited speaker selections were made by IPC.</a></dd>
-<dt>2024/05/24<span>Information</span></dt>
-<dd>Deadline for <a href="abstract.html">Abstract submission</a> for contributed orals and posters has been extended by two weeks to <font color="#ff0000">June 7</font>.</dd>
-<dt>2024/05/27<span>Information</span></dt>
-<dd><a href="visa.html">VISA Aplication page</a> is opened. The deadline is <font color="#ff0000">June 28</font>.</dd>
-<dt>2024/06/24<span>Information</span></dt>
-<dd><a href="registration.html">Registration and payment page</a> is opened. The registration and payment must be made by <font color="#ff0000">August 31 (JST)</font>.</dd>
-<dt>2024/07/01<span>Information</span></dt>
-<dd><a href="oral_presentations.html">Oral and poster presentation selections were made by IPC.</a></dd>
-<dt>2024/07/30<span>Information</span></dt>
-<dd><a href="agenda.html">Agenda was made by IPC.</a></dd>
-<dt>2024/09/01<span>Information</span></dt>
-<dd>Registration and payment were closed.</dd>-->
-</dl>
-
-
+<p><a href="visaform_SFP2026.docx">Visa application form</a></p>
 
 </section>
 
