--- a/abstract_open.html
+++ b/abstract_open.html
@@ -41,50 +41,34 @@
 </ul>
 </header>
 
-<!--スライドショー-->
-<div id="mainimg-box">
-<div id="mainimg">
-</div>
-</div>
-
 <div id="contents">
 
 <main>
 
-<section class="blur">
+<section>
 
-<!--<h2>24th International Stellarator Heliotron Workshop<span>International Conference Center Hiroshima, Japan  September 9-13, 2024</span></h2>-->
-<h2>12th International Workshop on 'Stochasticity in Fusion Plasmas'</h2>
-<h2>June 2-4, 2026<span>Higashi Hiroshima Arts & Culture Hall Kurara, Japan</span></h2>
+<h2>Abstract Submission</h2>
 
-<h2 class="normal">What's New</h2>
+<h3>Abstracts for all presentations must be received by <font color="#ff0000">March 13rd (Fri)</font> 2026. Abstracts must be submitted as a PDF document. Other formats will not be accepted.</h3>
 
-<dl class="new">
-<dt>2026/02/16<span>Information</span></dt>
-<dd>Web pages are opened.</dd>
-<!--<dt>2024/04/03<span>Information</span></dt>
-<dd><a href="nomination.html">Invited speaker nomination</a> is commencing.</dd>
-<dt>2024/04/06<span>Information</span></dt>
-<dd><a href="venue.html">Venue</a> page is opened.</dd>
-<dt>2024/05/01<span>Information</span></dt>
-<dd><a href="abstract.html">Abstract Submission</a> page is opened.</dd>
-<dt>2024/05/02<span>Information</span></dt>
-<dd><a href="invited_speakers.html">Invited speaker selections were made by IPC.</a></dd>
-<dt>2024/05/24<span>Information</span></dt>
-<dd>Deadline for <a href="abstract.html">Abstract submission</a> for contributed orals and posters has been extended by two weeks to <font color="#ff0000">June 7</font>.</dd>
-<dt>2024/05/27<span>Information</span></dt>
-<dd><a href="visa.html">VISA Aplication page</a> is opened. The deadline is <font color="#ff0000">June 28</font>.</dd>
-<dt>2024/06/24<span>Information</span></dt>
-<dd><a href="registration.html">Registration and payment page</a> is opened. The registration and payment must be made by <font color="#ff0000">August 31 (JST)</font>.</dd>
-<dt>2024/07/01<span>Information</span></dt>
-<dd><a href="oral_presentations.html">Oral and poster presentation selections were made by IPC.</a></dd>
-<dt>2024/07/30<span>Information</span></dt>
-<dd><a href="agenda.html">Agenda was made by IPC.</a></dd>
-<dt>2024/09/01<span>Information</span></dt>
-<dd>Registration and payment were closed.</dd>-->
-</dl>
+<h3>Please prepare an abstract headed by the title, name(s), and complete address(es) of the author(s) and send it as PDF to <a href="mailto:sfp2026@ml.hiroshima-u.ac.jp">sfp2026@ml.hiroshima-u.ac.jp</a>.</h3>
 
+<h3>Also, <font color="#ff0000">please select the session you wish to attend from the list</font> below and <font color="#ff0000">specify them in your email</font>.</h3>
 
+<ul>
+<li>S1:	Long-pulse Operation and Detachment with 3D Boundary</li>
+<li>S2:	3D Interaction Between Topology and Plasma Transport</li>
+<li>S3:	Magnetic Perturbations and ELM Control</li>
+<li>S4:	3D MHD Equilibrium and Core MHD Instabilities</li>
+<li>S5:	Fast Ion Confinement with 3D boundary</li>
+<li>S6:	New Ideas of Divertor</li>
+<li>S7:	Integrated Diagnostic Development and Mapping Technology</li>
+</ul>
+
+<h3><font color="#0000ff">Please use the linked template</font>.</h3>
+
+<p><a href="abstract_Template.docx">Template (MS-Word)</a></p>
+<p><a href="abstract_Template.tex">Template (LaTeX)</a></p>
 
 </section>
 
