--- a/committee.html
+++ b/committee.html
@@ -41,50 +41,81 @@
 </ul>
 </header>
 
-<!--スライドショー-->
-<div id="mainimg-box">
-<div id="mainimg">
-</div>
-</div>
-
 <div id="contents">
 
 <main>
 
-<section class="blur">
+<section>
 
-<!--<h2>24th International Stellarator Heliotron Workshop<span>International Conference Center Hiroshima, Japan  September 9-13, 2024</span></h2>-->
-<h2>12th International Workshop on 'Stochasticity in Fusion Plasmas'</h2>
-<h2>June 2-4, 2026<span>Higashi Hiroshima Arts & Culture Hall Kurara, Japan</span></h2>
+<h2>Committees</h2>
 
-<h2 class="normal">What's New</h2>
+<table class="ta1">
+<tr>
+<th colspan="2" class="tamidashi">International Scientific Committee</th>
+</tr>
+<tr>
+<th>Yunfeng Liang (Chair)</th>
+<td>Forschungszentrum J&uuml;lich, EU-Germany</td>
+</tr>
+<tr>
+<th>Yasuhiro Suzuki (Secretary)</th>
+<td>Hiroshima University, Japan</td>
+</tr>
+<tr>
+<th>Marcin Jakubowski</th>
+<td>Max Planck Institute for Plasma Physics, EU-Germany</td>
+</tr>
+<tr>
+<th>Dimitry Orlov</th>
+<td>UC San Diego, USA</td>
+</tr>
+<tr>
+<th>Katsumi Ida </th>
+<td>National Institute for Fusion Science, Japan</td>
+</tr>
+<tr>
+<th>Lu Wang </th>
+<td>Huazhong University of Science and Technology, China</td>
+</tr>
+<tr>
+<th>Youwen Sun </th>
+<td>Institute of plasma physics, Chinese Academy of Sciences, China</td>
+</tr>
+<tr>
+<th>Valentin Igochine </th>
+<td>Max Planck Institute for Plasma Physics, EU-Germany</td>
+</tr>
+<tr>
+<th>Piero Martin </th>
+<td>University of Padova,EU-Italy</td>
+</tr>
+<tr>
+<th>Jonathan Graves </th>
+<td>University of York,UK</td>
+</tr>
+<tr>
+<th>Oliver Schmitz  </th>
+<td>University of Wisconsin–Madison, USA</td>
+</tr>
+<tr>
+<th>Alexander Knieps  </th>
+<td>Forschungszentrum J&uuml;lich, EU-Germany</td>
+</tr>
+</table>
 
-<dl class="new">
-<dt>2026/02/16<span>Information</span></dt>
-<dd>Web pages are opened.</dd>
-<!--<dt>2024/04/03<span>Information</span></dt>
-<dd><a href="nomination.html">Invited speaker nomination</a> is commencing.</dd>
-<dt>2024/04/06<span>Information</span></dt>
-<dd><a href="venue.html">Venue</a> page is opened.</dd>
-<dt>2024/05/01<span>Information</span></dt>
-<dd><a href="abstract.html">Abstract Submission</a> page is opened.</dd>
-<dt>2024/05/02<span>Information</span></dt>
-<dd><a href="invited_speakers.html">Invited speaker selections were made by IPC.</a></dd>
-<dt>2024/05/24<span>Information</span></dt>
-<dd>Deadline for <a href="abstract.html">Abstract submission</a> for contributed orals and posters has been extended by two weeks to <font color="#ff0000">June 7</font>.</dd>
-<dt>2024/05/27<span>Information</span></dt>
-<dd><a href="visa.html">VISA Aplication page</a> is opened. The deadline is <font color="#ff0000">June 28</font>.</dd>
-<dt>2024/06/24<span>Information</span></dt>
-<dd><a href="registration.html">Registration and payment page</a> is opened. The registration and payment must be made by <font color="#ff0000">August 31 (JST)</font>.</dd>
-<dt>2024/07/01<span>Information</span></dt>
-<dd><a href="oral_presentations.html">Oral and poster presentation selections were made by IPC.</a></dd>
-<dt>2024/07/30<span>Information</span></dt>
-<dd><a href="agenda.html">Agenda was made by IPC.</a></dd>
-<dt>2024/09/01<span>Information</span></dt>
-<dd>Registration and payment were closed.</dd>-->
-</dl>
-
-
+<table class="ta1">
+<tr>
+<th colspan="2" class="tamidashi">Local Organizing Committee</th>
+</tr>
+<tr>
+<th>Yasuhiro Suzuki (Chair)</th>
+<td>Hiroshima University, Japan</td>
+</tr>
+<tr>
+<th>Kotaro Yamasaki (Secretary)</th>
+<td>Hiroshima University, Japan</td>
+</tr>
+</table>
 
 </section>
 
