--- a/date.html
+++ b/date.html
@@ -20,16 +20,18 @@
 <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="date.html">Key Dates</a></li>
-<!--<li><a href="">Program</a>
+<li><a href="abstract_open.html">Abstract Submission</a></li>
+<li><a href="">Program</a>
 	<ul>
 	<li><a href="agenda.html">Agenda</a></li>
-	<li><a href="invited_speakers.html">Invited Speakers</a></li>
+	<!--<li><a href="invited_speakers.html">Invited Speakers</a></li>
 	<li><a href="oral_presentations.html">Oral Presentations</a></li>
-	<li><a href="poster_presentations.html">Poster Presentations</a></li>
+	<li><a href="poster_presentations.html">Poster Presentations</a></li>-->
 	<li><a href="committee.html">Committees</a></li>
 	</ul>
 </li>
-<li><a href="venue.html">Venue</a></li>-->
+<!--<li><a href="venue.html">Venue</a></li>-->
+<li><a href="visa.html">VISA Application</a></li>
 </ul>
 </nav>
 </div>
@@ -47,14 +49,11 @@
 
 <h2>Key Dates</h2>
 
-<h3>March 7th: Open nominations for invited talks</h3>
-<h3>April 15th: Deadline for invited talk nominations</h3>
-<h3>May 1st: Open for Abstract submission for contributed orals and posters</h3>
-<h3>May 2nd: Notify Invited talk speakers</h3>
-<h3><font color="#ff0000">June 7th (extended)</font>: Deadline for Abstract submission for contributed orals and posters</h3>
-<h3><s>June 24th</s> <font color="#ff0000">July 1st</font>: Acceptance notification</h3>
-<h3>July 28th: Early Registration Deadline and Publication of Program Agenda</h3>
-<h3>August 31st: Registration Deadline</h3>
+<h3>February 17th: Open for abstract submission</h3>
+<h3>May 1st: Registration open and VISA application open</h3>
+<h3>March 13rd: Deadline for abstract submission</h3>
+<h3>March 27th: Selection decision will be announced</h3>
+<h3>April 30th: Registration Deadline</h3>
 
 
 </section>
