--- a/index.html
+++ b/index.html
@@ -57,31 +57,17 @@
 <h2>12th International Workshop on 'Stochasticity in Fusion Plasmas'</h2>
 <h2>June 2-4, 2026<span>Higashi Hiroshima Arts & Culture Hall Kurara, Japan</span></h2>
 
+<h2><a href="1st_Annoucement.pdf">1st Annoucement</a></h2>
+
 <h2 class="normal">What's New</h2>
 
 <dl class="new">
 <dt>2026/02/16<span>Information</span></dt>
 <dd>Web pages are opened.</dd>
-<!--<dt>2024/04/03<span>Information</span></dt>
-<dd><a href="nomination.html">Invited speaker nomination</a> is commencing.</dd>
-<dt>2024/04/06<span>Information</span></dt>
-<dd><a href="venue.html">Venue</a> page is opened.</dd>
-<dt>2024/05/01<span>Information</span></dt>
-<dd><a href="abstract.html">Abstract Submission</a> page is opened.</dd>
-<dt>2024/05/02<span>Information</span></dt>
-<dd><a href="invited_speakers.html">Invited speaker selections were made by IPC.</a></dd>
-<dt>2024/05/24<span>Information</span></dt>
-<dd>Deadline for <a href="abstract.html">Abstract submission</a> for contributed orals and posters has been extended by two weeks to <font color="#ff0000">June 7</font>.</dd>
-<dt>2024/05/27<span>Information</span></dt>
-<dd><a href="visa.html">VISA Aplication page</a> is opened. The deadline is <font color="#ff0000">June 28</font>.</dd>
-<dt>2024/06/24<span>Information</span></dt>
-<dd><a href="registration.html">Registration and payment page</a> is opened. The registration and payment must be made by <font color="#ff0000">August 31 (JST)</font>.</dd>
-<dt>2024/07/01<span>Information</span></dt>
-<dd><a href="oral_presentations.html">Oral and poster presentation selections were made by IPC.</a></dd>
-<dt>2024/07/30<span>Information</span></dt>
-<dd><a href="agenda.html">Agenda was made by IPC.</a></dd>
-<dt>2024/09/01<span>Information</span></dt>
-<dd>Registration and payment were closed.</dd>-->
+<dt>2026/02/17<span>Information</span></dt>
+<dd><a href="abstract_open.html">Abstract Submission</a> page is opened.</dd>
+<dt>2026/02/17<span>Information</span></dt>
+<dd><a href="visa.html">VISA Aplication page</a> is opened. The deadline is <font color="#ff0000">March 13</font>.</dd>
 </dl>
 
 
