PDF link is corected.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <h2>12th International Workshop on 'Stochasticity in Fusion Plasmas'</h2>
 <h2>June 2-4, 2026<span>Higashi Hiroshima Arts & Culture Hall Kurara, Japan</span></h2>
 
-<h2><a href="1st_Annoucement.pdf">1st Annoucement</a></h2>
+<h2><a href="https://filedn.com/lhW9PBTptG9zJ6bG8SBNUUu/1st_annoucement.pdf">1st Annoucement</a></h2>
 
 <h2 class="normal">What's New</h2>
 
